--- a/backend/package.json
+++ b/backend/package.json
@@ -12,12 +12,15 @@
   "license": "ISC",
   "description": "Backend for Hokz Academy e-learning project",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.932.0",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.8.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "ffprobe-static": "^3.1.0",
+    "fluent-ffmpeg": "^2.1.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.2",
     "multer": "^2.0.2",
